# nlp_analyzer

./: -1.gitignore  CHANGELOG.md  README.md  __init__.py  analyzer.py  app.py  debug_api.py  env.example  models.py  prompts.py  pyproject.toml  router.py  run_golden.py  run_test.py
providers/: __init__.py  base.py  claude.py  mock.py  openai.py
tests/: golden_set_ko.json  test_analyzer.py  test_postprocess.py
